fixed scroll on big text in textarea with hidden overflow

--- a/public/global.css
+++ b/public/global.css
@@ -6,10 +6,11 @@ html, body {
 
 body {
 	color: #333;
+	height: fit-content;
 	margin: 0;
-	padding: 8px;
+	padding: 0px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: "Google Sans", Roboto, Arial, sans-serif;
 }
 
 a {
@@ -32,15 +33,14 @@ label {
 input, button, select, textarea {
 	font-family: inherit;
 	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
+	padding: 0px;
+	margin: 0px;
+	border: none;
 	border-radius: 2px;
 	background-color: transparent;
 	resize: none;
 	outline: none;
+	overflow: hidden;
 }
 
 input:disabled {
